# repo-archiver

./: .gitignore  Dockerfile  README.md  archive_config.example.json  pyproject.toml
docs/testing/: test-map.md
docs/testing/suites/: encryption-aes.md
src/repo_archiver/: __init__.py  __main__.py  archiver.py  cli.py  config.py  patterns.py
tasks_descriptions/tasks/: 002-english-localisation.md  003-agent-skill.md  004-testing-docs-lazy-map.md
tests/: test_archiver.py  test_cli.py
